--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -11,9 +11,11 @@
 
 .card .front {
   transform: rotateY(90deg);
+  transition: all ease-in-out 0.2s;
   position: absolute
 }
 
 .flipped .front {
   transform: rotateY(0deg);
+  transition-delay: 0.2s;
 }
