--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,13 +1,14 @@
 .card {
   position: relative;
+  margin-bottom: 10px;
 }
 
 .card img {
   width: 100%;
   display: block;
-  border: 2px solid #fff;
+  border: none;
   border-radius: 6px;
-}
+  box-shadow: 10px 5px 5px #000;}
 
 .card .front {
   transform: rotateY(90deg);
