--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,9 @@
 .card {
   position: relative;
-  margin-bottom: 10px;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 200px;
+  margin: 5px;
 }
 
 .card img {
