--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,20 @@
 }
 
 button {
-  background: none;
-  border: 2px solid #fff;
+  background: linear-gradient(0.15turn, #3f87a6, #ebf8e1, #f69d3c);;
   padding: 6px 12px;
-  border-radius: 4px;
-  color: #fff;
+  border-radius: 26px;
   font-weight: bold;
   cursor: pointer;
   font-size: 1em;
+  color: gray;
+  border: none;
 }
 
 button:hover {
-  background: #c23866;
-  color: #fff;
+  background: linear-gradient(0.75turn, #3f87a6, #ebf8e1, #f69d3c);;
+  color: gray
+
 }
 
 .title {
