--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -11,7 +11,12 @@
   display: block;
   border: none;
   border-radius: 6px;
-  box-shadow: 10px 5px 5px #000;}
+  box-shadow: 10px 5px 5px #000;
+}
+
+.card:active {
+  box-shadow: 20px 20px 20px #000;
+}
 
 .card .front {
   transform: rotateY(90deg);
