--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,9 @@
+@import url('https://unpkg.com/@catppuccin/palette@0.1.4/css/catppuccin.css');
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
+  font-synthesis:weight;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,5 +15,7 @@ body {
   margin: 0;
   font-size: 1.5em;
   text-align: center;
-  color: #fff
+  color: var(--ctp-mocha-text);
+	background: var(--ctp-mocha-base);
+
 }
