--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -10,7 +10,8 @@
   width: 100%;
   display: block;
   border: none;
-  border-radius: 26px;
+  border-radius: 20px;
+  border: none;
   box-shadow: 10px 5px 5px #000;
 }
 
