--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -21,11 +21,20 @@
 
 .card .front {
   transform: rotateY(90deg);
-  transition: all ease-in-out 0.4s;
-  position: absolute
+  transition: transform 0.8s;
+  position: absolute;
+  transform-style: preserve-3d;
 }
 
 .flipped .front {
-  transform: rotateY(0deg);
-  transition-delay: 0.2s;
+  transform: rotateY(180deg);
+  transition-delay: 0.1s;
+}
+
+.flipped .card {
+  display: none;
+}
+
+.flipped .back {
+  display: none;
 }
