--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -2,4 +2,8 @@
   margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
+  padding: 20px;
+  background: var(--ctp-frappe-base);
+  border-radius: 20px;
+  box-shadow: rgba(6, 6, 124, 0.2) 0px 7px 29px 0px;
 }
