--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,17 +1,16 @@
 button {
-  background: linear-gradient(0.15turn, #3f87a6, #ebf8e1, #f69d3c);;
+  background: linear-gradient(0.15turn, #165f7e, #587442, #6c3f10);;
   padding: 6px 32px;
   border-radius: 26px;
   font-weight: normal;
   cursor: pointer;
   font-size: 1em;
-  color: #000;
+  color: var(--ctp-mocha-text);
   border: none;
 }
 
 button:hover {
-  background: linear-gradient(0.75turn, #3f87a6, #ebf8e1, #f69d3c);;
-  color: var(--ctp-mocha-text);
+  background: linear-gradient(0.15turn, #257ba0, #a7bb98, #d57713);;
 }
 
 .title {
