add new menu button

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -19,10 +19,13 @@ button:hover {
 }
 
 .header-container {
+  flex: 1;
   max-width: 100%;
   background: var(--ctp-macchiato-base);
   padding: 10px;
   border: none;
   border-radius: 16px;
   margin-bottom: 20px;
+  justify-content: center;
+
 }
