--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,9 +1,9 @@
 .board {
-  margin-top: 40px;
+  height: 400px;
   display: flex;
   flex-wrap: wrap;
   padding: 25px;
-  background: var(--ctp-frappe-base);
+  background: var(--ctp-macchiato-base);
   border-radius: 16px;
   box-shadow: rgba(6, 6, 124, 0.2) 0px 7px 29px 0px;
 }
