--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -5,3 +5,9 @@
   align-items: center;     /* center items horizontally, in this case */
   height: 700px;
 }
+
+.button-style {
+  width: 200px;
+  padding: 20px;
+  margin: 10px;
+}
