--- a/src/components/PlayerTurns.css
+++ b/src/components/PlayerTurns.css
@@ -1,9 +1,30 @@
-span {
-  font-size: 20px;
-  font-weight: bold;
-  padding: 10px;
+.container {
+  text-align: center;
+  flex-direction: row;
+  margin-bottom: 10px;
 }
 
-.message-data {
+span {
+  font-size: 20px;
+  font-weight: 400;
+  padding-right: 10px;
+  flex-direction: column;
+}
+
+.player-title {
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.row {
+  display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center
 }
