--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,13 +1,10 @@
 .board {
-  /* height: 500px;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 25px; */
+  padding: 20px;
   margin-top: 40px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 30px;
   background: var(--ctp-macchiato-base);
   border-radius: 16px;
-  box-shadow: rgba(6, 6, 124, 0.2) 0px 7px 29px 0px;
+  box-shadow:   #cba6f7 0px 7px 29px 0px;
 }
