--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,33 +1,46 @@
-.card {
+.card-container {
   position: relative;
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: 21%;
   margin: 5px;
-}
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
 
-.card img {
+}
+ .card-wrapper {
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+ }
+
+ .flipped .card-wrapper {
+  transform: rotateY(180deg);
+
+ }
+.card-container img {
   width: 100%;
   display: block;
   border: none;
   border-radius: 20px;
   border: none;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
 }
 
-.card:active {
+.card-container:active {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.card .front {
+.card-container .front {
   transform: rotateY(90deg);
   transition: transform 0.8s;
   position: absolute;
   transform-style: preserve-3d;
 }
 
-.flipped .cover {
-  transform: rotateY(180deg);
-  transition-delay: 0.1s;
+.flipped .card-wrapper {
+  transform: translateX(-100%) rotateY(-180deg);
+  transition-delay: 0.5s;
 }
 
 .flipped .front {
