--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,27 @@
 @import url('https://unpkg.com/@catppuccin/palette@0.1.4/css/catppuccin.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  color-scheme: light dark;
-  font-synthesis:weight;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	--foreground-rgb: 0, 0, 0;
+	--background-start-rgb: 214, 219, 220;
+	--background-end-rgb: 255, 255, 255;
 }
 
+@media (prefers-color-scheme: dark) {
+	:root {
+		--foreground-rgb: 255, 255, 255;
+		--background-start-rgb: 0, 0, 0;
+		--background-end-rgb: 0, 0, 0;
+	}
+}
 
 body {
-  margin: 00;
-  font-size: 1.5em;
-  text-align: center;
-  color: var(--ctp-mocha-text);
-	background: var(--ctp-mocha-base);
+	font-size: 1.5em;
+	text-align: center;
+	color: rgb(var(--foreground-rgb));
+	background: linear-gradient(
+			to bottom,
+			transparent,
+			rgb(var(--background-end-rgb))
+		)
+		rgb(var(--background-start-rgb));
 }
