--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://unpkg.com/@catppuccin/palette@0.1.4/css/catppuccin.css');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
 	--foreground-rgb: 0, 0, 0;
 	--background-start-rgb: 214, 219, 220;
