--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 button {
-	background: var(--ctp-macchiato-base);
+	background: #f3f3f3;
 	padding: 6px 32px;
 	border-radius: 26px;
 	font-weight: normal;
